# permanet-mesh-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  config.example.yaml  pyproject.toml
.cursor/rules/: branching.mdc  quality-gates.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  experiment.yml  feature.yml  hardware-safety.yml  quality-improvement.yml  security.yml
.github/workflows/: ci.yml
deploy/systemd/: permanet-agent.service
docs/: architecture.md  channel-policy.md  developer-handoff.md  hardware-setup.md  roadmap.md
docs/planning/: priority-ledger.md
docs/prompts/: ai-reviewer.md
docs/reviews/: release-readiness-review.md
docs/sops/: ai-coding-quality-system.md  branching-and-release.md  code-review-process.md  github-project-orchestration.md  governance-invariants.md  issue-prioritization.md  multi-agent-concurrency.md  pull-request-quality-gate.md  required-status-check.md
docs/templates/: agent-assignment-table.md
examples/transcripts/: public_help_flow.txt  public_ping_flow.txt
scripts/: __init__.py  check_branch_policy.py  check_concurrency_preflight.py  generate_review_packet.py
src/permanet_agent/: __init__.py  main.py
src/permanet_agent/ai/: __init__.py  base.py  mock_backend.py
src/permanet_agent/commands/: __init__.py  handlers.py  parser.py
tests/: test_branch_policy.py  test_command_parser.py  test_generate_review_packet.py  test_mock_flow.py  test_pagination_cache.py  test_rate_limits.py  test_response_policy.py  test_router.py
(+11 files in other folders)
