[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permanet-mesh-agent"
version = "0.1.0"
description = "A summon-only Meshtastic chatbot gateway for public and private mesh channels."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aggredicus" }]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
meshtastic = [
  "meshtastic>=2.5",
]
openai = [
  "openai>=1.0",
]
ollama = [
  "ollama>=0.3",
]

[project.scripts]
permanet-agent = "permanet_agent.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
